Desarrollo de la lógica básica

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <input type="number" id="js-usuario">
     <input type="button" value="Enviar" id="js-boton">
   </form>
-
+  <div id="js-resultado"></div>
   <script src="peso-interplanetario.js"></script>
 </body>
 </html>
