Se creó un GULP básico para SASS, BrowserSync, HTML y JS. Para compilar SASS, leer HTML, JS y crear un server con Browser-Sync.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Tu peso en otros planetas</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <h1>Tu peso en otros planetas</h1>
-  <p>¿Descubre cual es tu peso en otros planetas del sistema solar?</p>
+  <p>¿Descubre cuál es tu peso en otros planetas del sistema solar?</p>
   <form>
     <input type="number" id="js-usuario">
     <input type="button" value="Enviar" id="js-boton">
