--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <a  class="header__item--menu" id="nav-toggle" href="#">&#9776;</a>
       </div>
       <div class="header__item header__form">
-        <form class="header__item--form">
+        <form class="header__item--form" method="post" action="javascript:pesaje()">
           <input type="number" id="js-usuario" class="header__item--form--input">
-          <input type="button" value="Enviar" id="js-boton" class="header__item--form--button">
+          <input type="submit" value="Enviar" id="js-boton" class="header__item--form--button">
         </form>
       </div>
   </header>
