--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       </div>
       <div class="header__item header__form">
         <form class="header__item--form" method="post" action="javascript:pesaje()">
-          <input type="number" id="js-usuario" class="header__item--form--input">
+          <input type="number" min="0" id="js-usuario" class="header__item--form--input">
           <input type="submit" value="Enviar" id="js-boton" class="header__item--form--button">
         </form>
       </div>
