--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="header__item header__form">
         <form class="header__item--form" method="post" action="javascript:pesaje()">
           <input type="number" min="0" id="js-usuario" class="header__item--form--input">
-          <input type="submit" value="Enviar" id="js-boton" class="header__item--form--button">
+          <input type="submit" value="Calcular" id="js-boton" class="header__item--form--button">
         </form>
       </div>
   </header>
