Se renombro el archivo peso-interplanetario.js -> scripts.js

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     </div>
     <div id="js-resultado" class="planetario"></div>
   </main>
-  <script src="peso-interplanetario.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
