--- a/index.html
+++ b/index.html
@@ -2,27 +2,26 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Tu peso en otros planetas</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header class="header">
-      <div class="header__item header__menu">
-        <a  class="header__item--menu" id="nav-toggle" href="#">&#9776;</a>
+  <header class="main-header">
+      <div class="main-nav">
+        <a  class="main-menu" id="js-nav-toggle" href="#">&#9776;</a>
       </div>
-      <div class="header__item header__form">
-        <form class="header__item--form" method="post" action="javascript:pesaje()">
-          <input type="number" min="0" id="js-usuario" class="header__item--form--input">
-          <input type="submit" value="Calcular" id="js-boton" class="header__item--form--button">
-        </form>
-      </div>
+      <form class="main-form" method="post" action="javascript:pesaje()">
+        <input type="number" min="0" id="js-usuario" class="main-form--input">
+        <input type="submit" value="Calcular" id="js-boton" class="main-form--button">
+      </form>
   </header>
-  <main class="cuerpo">
-    <div class="main__copy">
-      <h1 class="main__copy--title">Tu peso en otros planetas</h1>
-      <p class="main__copy--description">Ingresa tu peso actual y descubre cuanto pesarías si estuvieras en otros planetas del sistema solar.</p>
-    </div>
-    <div id="js-resultado" class="planetario"></div>
+  <div class="banner">
+    <h1 class="banner--title">Tu peso en otros planetas</h1>
+    <p class="banner--description">Ingresa tu peso actual y descubre cuanto pesarías si estuvieras en otros planetas del sistema solar.</p>
+  </div>
+  <main>
+    <div id="js-resultado" class="main-content"></div>
   </main>
   <script src="scripts.js"></script>
 </body>
