Se agrego un fondo estrellado Ademas, se agrego la imagen de hamburguesa ☰  al HTML por que desde el movil no cargaba el código

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="main-header">
       <div class="main-nav">
-        <a  class="main-menu" id="js-nav-toggle" href="#">&#9776;</a>
+        <a  class="main-menu" id="js-nav-toggle" href="#">☰</a><!-- &#9776; -->
       </div>
       <form class="main-form" method="post" action="javascript:pesaje()">
         <input type="number" min="0" id="js-usuario" class="main-form--input">
