Se implemento un menu mobile Este layer va a mostrar una explicación del app o disclaimer de los calculos para el peso

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
   <header class="main-header">
       <div class="main-nav">
-        <a  class="main-menu" id="js-nav-toggle" href="#">&#8801;</a><!-- &#9776; -->
+        <span class="toggle-menu" id="js-toggle-menu">&#8801;</span><!-- &#9776; -->
+        <div class="main-menu" id="js-main-menu">
+          <h2 class="main-menu--disclaimer">Disclaimer</h2>
+          <p class="main-menu--content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non illum rerum iusto laboriosam provident perspiciatis vero commodi, explicabo laudantium exercitationem libero, ea suscipit. Iure fugiat voluptate, quam et quaerat praesentium!</p>
+          <p class="main-menu--content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non illum rerum iusto laboriosam provident perspiciatis vero commodi, explicabo laudantium exercitationem libero, ea suscipit. Iure fugiat voluptate, quam et quaerat praesentium!</p>
+        </div>
       </div>
       <form class="main-form" method="post" action="javascript:pesaje()">
         <input type="number" min="0" id="js-usuario" class="main-form--input">
