Se agrego un sidebar responsive con info

--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
       <div class="main-nav">
         <span class="toggle-menu" id="js-toggle-menu">&#8801;</span><!-- &#9776; -->
         <div class="main-menu" id="js-main-menu">
-          <h2 class="main-menu--disclaimer">Disclaimer</h2>
-          <p class="main-menu--content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non illum rerum iusto laboriosam provident perspiciatis vero commodi, explicabo laudantium exercitationem libero, ea suscipit. Iure fugiat voluptate, quam et quaerat praesentium!</p>
-          <p class="main-menu--content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non illum rerum iusto laboriosam provident perspiciatis vero commodi, explicabo laudantium exercitationem libero, ea suscipit. Iure fugiat voluptate, quam et quaerat praesentium!</p>
+          <div class="main-menu--disclaimer">
+            <h2 class="main-menu--title">Disclaimer</h2>
+            <p class="main-menu--content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non illum rerum iusto laboriosam provident perspiciatis vero commodi, explicabo laudantium exercitationem libero, ea suscipit. Iure fugiat voluptate, quam et quaerat praesentium!</p>
+            <p class="main-menu--content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non illum rerum iusto laboriosam provident perspiciatis vero commodi, explicabo laudantium exercitationem libero, ea suscipit. Iure fugiat voluptate, quam et quaerat praesentium!</p>
+            <div class="main-menu--footer">
+              <code>Github/<a href="https://github.com/juanibrex/peso" class="main-menu--source">peso</a></code>
+              <code>With<a href="https://twitter.com/JuaniBrex" class="main-menu--sign">@juanibrex</a></code>
+            </div>
+          </div>
         </div>
       </div>
       <form class="main-form" method="post" action="javascript:pesaje()">
