Se agregaron los planetas 1era version

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
     <p class="banner--description">Ingresa tu peso actual y descubre cuanto pesarías si estuvieras en otros planetas del sistema solar.</p>
   </div>
   <main>
+<!-- <div id="js-resultado" class="main-content">
+  <div class="main-content__item">
+    <span class="main-content__item--name Mercurio">' + w.nombre + '</span>
+    <span class="main-content__item--weight">' + pesoFinal + ' Kg</span>
+  </div>
+</div> -->
     <div id="js-resultado" class="main-content"></div>
   </main>
   <script src="scripts.js"></script>
