--- a/index.html
+++ b/index.html
@@ -34,9 +34,16 @@
   <main>
 <!-- <div id="js-resultado" class="main-content">
   <div class="main-content__item">
-    <span class="main-content__item--name Mercurio">' + w.nombre + '</span>
-    <span class="main-content__item--weight">' + pesoFinal + ' Kg</span>
+    <span class="main-content__item--name Mercurio">Mercurio</span>
+    <span class="main-content__item--weight">100</span>
   </div>
+  <div class="main-content__item"><span class="main-content__item--name Venus">Venus</span><span class="main-content__item--weight">101</span></div>
+  <div class="main-content__item"><span class="main-content__item--name Marte">Marte</span><span class="main-content__item--weight">102</span></div>
+  <div class="main-content__item"><span class="main-content__item--name Jupiter">Jupiter</span><span class="main-content__item--weight">103</span></div>
+  <div class="main-content__item"><span class="main-content__item--name Saturno">Saturno</span><span class="main-content__item--weight">104</span></div>
+  <div class="main-content__item"><span class="main-content__item--name Urano">Urano</span><span class="main-content__item--weight">105</span></div>
+  <div class="main-content__item"><span class="main-content__item--name Neptuno">Neptuno</span><span class="main-content__item--weight">106</span></div>
+  <div class="main-content__item"><span class="main-content__item--name Pluton">Pluton</span><span class="main-content__item--weight">107</span></div>
 </div> -->
     <div id="js-resultado" class="main-content"></div>
   </main>
