Se implemento PWA

--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es-ES">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <title>Tu peso en otros planetas</title>
   <link rel="stylesheet" href="css/styles.css">
+
+  <link rel="manifest" href="manifest.json">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="application-name" content="Peso Interplanetario">
+  <meta name="apple-mobile-web-app-title" content="Peso Interplanetario">
+  <meta name="theme-color" content="#363640">
+  <meta name="msapplication-navbutton-color" content="#363640">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="msapplication-starturl" content="/peso/">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" type="image/png" sizes="192x192" href="icons/icon-192x192.png">
+  <link rel="apple-touch-icon" type="image/png" sizes="192x192" href="icons/icon-192x192.png">
+
 </head>
 <body>
   <header class="main-header">
